[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://Menu/menu_theme.tres" type="Theme" id=2]
[ext_resource path="res://SFX/8bitSMB/smb_pause.wav" type="AudioStream" id=3]
[ext_resource path="res://Menu/MenuSMB.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Blackscreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="PauseScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="CenterContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="MenuBox2" type="TextureRect" parent="PauseMenu"]
show_behind_parent = true
margin_right = 310.0
margin_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 310, 150 )
texture = ExtResource( 4 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
margin_left = 55.0
margin_top = 18.0
margin_right = 255.0
margin_bottom = 131.0
grow_horizontal = 0
grow_vertical = 2

[node name="Info" type="Label" parent="PauseMenu/VBoxContainer"]
margin_right = 200.0
margin_bottom = 50.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 50 )
text = "PAUSE"
align = 1
valign = 1

[node name="space" type="Label" parent="PauseMenu/VBoxContainer"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 67.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 10 )
align = 1
valign = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
margin_top = 71.0
margin_right = 200.0
margin_bottom = 113.0
grow_horizontal = 0
grow_vertical = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 42.0

[node name="Continue" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 19.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 200, 0 )
text = "Continue"

[node name="End" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 200.0
margin_bottom = 42.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 200, 0 )
text = "End Game"

[node name="QuitMenu" type="CenterContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="MenuBox" type="TextureRect" parent="QuitMenu"]
show_behind_parent = true
margin_right = 310.0
margin_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 310, 150 )
texture = ExtResource( 4 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="QuitMenu"]
margin_left = 11.0
margin_top = 18.0
margin_right = 299.0
margin_bottom = 131.0
grow_horizontal = 0
grow_vertical = 2

[node name="Info" type="Label" parent="QuitMenu/VBoxContainer"]
margin_right = 288.0
margin_bottom = 50.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 50 )
text = "Quit Game? (All progress
will be lost!)"
align = 1
valign = 1

[node name="space" type="Label" parent="QuitMenu/VBoxContainer"]
margin_top = 54.0
margin_right = 288.0
margin_bottom = 67.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 10 )
align = 1
valign = 2

[node name="HBoxContainer" type="HBoxContainer" parent="QuitMenu/VBoxContainer"]
margin_top = 71.0
margin_right = 288.0
margin_bottom = 113.0
grow_horizontal = 0
grow_vertical = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="QuitMenu/VBoxContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 244.0
margin_bottom = 42.0

[node name="Cancel" type="Button" parent="QuitMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 19.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 200, 0 )
text = "Cancel"

[node name="ConfirmEnd" type="Button" parent="QuitMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 200.0
margin_bottom = 42.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 200, 0 )
text = "Quit Game"

[node name="FullscreenOverlay" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="OverlayAnimation" type="AnimationPlayer" parent="FullscreenOverlay"]
anims/FadeOut = SubResource( 1 )

[node name="Blackscreen" type="ColorRect" parent="FullscreenOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="PauseSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "IngameSFX"

[node name="PauseBuffer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.6
[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer/VBoxContainer/End" to="." method="_on_End_pressed"]
[connection signal="pressed" from="QuitMenu/VBoxContainer/HBoxContainer/VBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="QuitMenu/VBoxContainer/HBoxContainer/VBoxContainer/ConfirmEnd" to="." method="_on_ConfirmEnd_pressed"]
[connection signal="timeout" from="PauseBuffer" to="." method="_on_PauseBuffer_timeout"]
